--- a/app/views/messages/_main_chat.html.erb
+++ b/app/views/messages/_main_chat.html.erb
@@ -1,9 +1,59 @@
 <div class="chat-header">
-＜チャット画面＞
+  <div class="left-header">
+    <div class="header-title">
+      hogefuga
+    </div>
+  </div>
+  <div class="right-header">
+    <div class="header-button">
+      <a href="#">チャットを終了する</a>
+    </div>
+  </div>
 </div>
+
 <div class="messages">
-main
+
+  <div class="message">
+    <div class="message-header">
+      <div class="message-name">
+        Tom
+      </div>
+      <div class="message-date">
+        2020/3/31(Wed) 12:43:30
+      </div>
+    </div>
+    <div class="lower-message">
+      <div class="message-body">
+        おはよう
+      </div>
+    </div>
+  </div>
+
+  <div class="message">
+    <div class="message-header">
+      <div class="message-name">
+        Sim
+      </div>
+      <div class="message-date">
+        2020/3/31(Wed) 19:43:30
+      </div>
+    </div>
+    <div class="lower-message">
+      <div class="message-body">
+        こんばんみ
+      </div>
+    </div>
+  </div>
+
 </div>
+
 <div class="form">
-bottom
+  <div class="form-input">
+    <input class="form-message" placeholder="type a message">
+    <label class="form-image">
+      <span class="image-file">画像</span>
+      <input type="file" class="hidden">
+    </label>
+  </div>
+  <input class="form-submit" type="submit" value="送信">
 </div>
