--- a/app/views/messages/_main_chat.html.erb
+++ b/app/views/messages/_main_chat.html.erb
@@ -12,39 +12,7 @@
 </div>
 
 <div class="messages">
-
-  <div class="message">
-    <div class="message-header">
-      <div class="message-name">
-        Tom
-      </div>
-      <div class="message-date">
-        2020/3/31(Wed) 12:43:30
-      </div>
-    </div>
-    <div class="lower-message">
-      <div class="message-body">
-        おはよう
-      </div>
-    </div>
-  </div>
-
-  <div class="message">
-    <div class="message-header">
-      <div class="message-name">
-        Sim
-      </div>
-      <div class="message-date">
-        2020/3/31(Wed) 19:43:30
-      </div>
-    </div>
-    <div class="lower-message">
-      <div class="message-body">
-        こんばんみ
-      </div>
-    </div>
-  </div>
-
+  <%= render partial: 'message', collection: @messages %>
 </div>
 
 <%= form_with model: [@room, @message], html: {class: "form"}, local: true do |f| %>
